--- a/public/css/register.css
+++ b/public/css/register.css
@@ -6,7 +6,7 @@
 .register-sec{
     width: 100%;
     background-image: url('../img/img-rg1.jpg');
-    height: 125vh;
+    /* height: 126vh; */
     /* background-repeat: no-repeat; */
     padding: 10px;
     margin-top: 30px;
